add search func

--- a/FlowerForever/FlowerForever/Base.lproj/Main.storyboard
+++ b/FlowerForever/FlowerForever/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="A1b-1w-78u">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7Ve-s4-coT">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,16 +9,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Girlstagram-->
+        <!--Images Table View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ImagesTableViewController" customModule="FlowerForever" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Xpl-on-Zqp">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                 <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="0.0" bottom="8" trailing="0.0"/>
                                 <color key="separatorColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
@@ -179,32 +179,25 @@
                         <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Girlstagram" largeTitleDisplayMode="never" id="w7w-AM-oCA">
-                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="GuZ-oE-rp9">
-                            <connections>
-                                <action selector="formatChangeButtonTapped:" destination="BYZ-38-t0r" id="4yM-jo-UMx"/>
-                                <segue destination="nPD-Tg-Uaf" kind="show" id="O34-Ji-kDA"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="w7w-AM-oCA"/>
                     <connections>
                         <outlet property="imagesTable" destination="Xpl-on-Zqp" id="6d6-oN-siP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1043.4782608695652" y="132.58928571428572"/>
+            <point key="canvasLocation" x="3797.1014492753625" y="132.58928571428572"/>
         </scene>
-        <!--Images Collection View Controller-->
+        <!--Girlstagram-->
         <scene sceneID="jn1-b8-iN6">
             <objects>
                 <viewController id="nPD-Tg-Uaf" customClass="ImagesCollectionViewController" customModule="FlowerForever" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0gG-S8-R6C">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YnC-Ms-Aw2" userLabel="Images Collection">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="140" width="414" height="722"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0H1-5h-Zcz">
                                     <size key="itemSize" width="50" height="50"/>
@@ -270,24 +263,76 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ujT-3G-eTM"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Girlstagram" id="m1s-Sr-Ndw">
+                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="gow-8n-zg0">
+                            <connections>
+                                <action selector="dismissButtonTapped:" destination="nPD-Tg-Uaf" id="eGs-TJ-xia"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <outlet property="imagesCollection" destination="YnC-Ms-Aw2" id="ZOV-pJ-7Sy"/>
+                        <outlet property="imagesCollectionView" destination="YnC-Ms-Aw2" id="ZOV-pJ-7Sy"/>
+                        <outlet property="superView" destination="0gG-S8-R6C" id="2bd-Te-WYd"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="SegueToTableView" id="jmO-Mm-Vds"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="26T-RW-EHT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2037.68115942029" y="132.58928571428572"/>
+            <point key="canvasLocation" x="2510.144927536232" y="132.58928571428572"/>
+        </scene>
+        <!--Search View Controller-->
+        <scene sceneID="jHG-g8-oqa">
+            <objects>
+                <viewController id="7Ve-s4-coT" customClass="SearchViewController" customModule="FlowerForever" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PXc-LA-DZd">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="749" verticalHuggingPriority="749" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fwl-H8-ABk">
+                                <rect key="frame" x="50" y="333" width="314" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ryJ-3v-sfq">
+                                <rect key="frame" x="177" y="383" width="60" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="Search"/>
+                                <connections>
+                                    <action selector="searchButtonTapped:" destination="7Ve-s4-coT" eventType="touchUpInside" id="OJR-3u-uHO"/>
+                                    <segue destination="3iH-qN-T8c" kind="show" id="nkF-U6-1Ik"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ryJ-3v-sfq" firstAttribute="centerX" secondItem="PXc-LA-DZd" secondAttribute="centerX" id="6Y8-FH-EVk"/>
+                            <constraint firstItem="fwl-H8-ABk" firstAttribute="centerX" secondItem="PXc-LA-DZd" secondAttribute="centerX" id="fXm-ZP-PjV"/>
+                            <constraint firstItem="fwl-H8-ABk" firstAttribute="leading" secondItem="cb1-Yb-Uom" secondAttribute="leading" constant="50" id="n6G-YB-Oy5"/>
+                            <constraint firstItem="fwl-H8-ABk" firstAttribute="centerY" secondItem="PXc-LA-DZd" secondAttribute="centerY" constant="-100" id="x10-eK-9aL"/>
+                            <constraint firstItem="ryJ-3v-sfq" firstAttribute="top" secondItem="fwl-H8-ABk" secondAttribute="bottom" constant="20" id="ysg-4y-pUa"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="cb1-Yb-Uom"/>
+                    </view>
+                    <connections>
+                        <outlet property="searchButton" destination="ryJ-3v-sfq" id="0KQ-rx-lxd"/>
+                        <outlet property="searchTextField" destination="fwl-H8-ABk" id="69o-6G-4P7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eSN-9G-rfb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="649" y="133"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="uUn-Rf-jJ9">
+        <scene sceneID="frQ-TU-GYT">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="A1b-1w-78u" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3iH-qN-T8c" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="7Em-R5-AYV">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="12Y-gm-CPF">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
@@ -295,12 +340,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="mtc-Rj-VOQ"/>
+                        <segue destination="nPD-Tg-Uaf" kind="relationship" relationship="rootViewController" id="mqk-YV-HNM"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GF3-8D-fqo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yGX-34-fkh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="133.33333333333334" y="132.58928571428572"/>
+            <point key="canvasLocation" x="1600.0000000000002" y="132.58928571428572"/>
         </scene>
     </scenes>
     <resources>
